# Windows-10-terminal-game-engine

./: BmpHandler.cpp  BmpHandler.h  CMakeLists.txt  Clock.cpp  Clock.h  Color.cpp  Color.h  ConsoleHandler.cpp  ConsoleHandler.h  Defines.h  ErrorHandler.cpp  ErrorHandler.h  EventHandler.cpp  EventHandler.h  FrameBuffer.cpp  FrameBuffer.h  ImageField.cpp  ImageField.h  LineShape.cpp  LineShape.h  Logger.cpp  Logger.h  Pixel.cpp  Pixel.h  Point.cpp  Point.h  README.md  RectangleShape.cpp  RectangleShape.h  Sound.cpp  Sound.h  TextField.cpp  TextField.h  Vec2i.cpp  Vec2i.h  Vec2u.cpp  Vec2u.h  main.cpp
